Fixed Sonar code smells